<resources>
    <string name="app_name">BeepBuddy</string>
    <string name="heading1">Add Parking</string>
    <string name="buildingCode">Building Code</string>
    <string name="parkingDuration">Parking Duration</string>
    <string name="carPlate">Car Plate Number</string>
    <string name="suiteNumber">Host\'s Suite Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Not a member? Sign Up!</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="remember">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="paymentType">Payment Type</string>
    <string name="paymentInfo">Payment Information</string>
    <string name="cardName">Card Name</string>
    <string name="visa">VISA</string>
    <string name="mastercard">Mastercard</string>
    <string name="cvv">CVV</string>
    <string name="expDate">Expiry Date:</string>
    <string name="parkingReceipt">Parking Receipt</string>
    <string name="date">Date of Parking</string>
    <string name="time">Time of Parking</string>
    <string name="parkingCost">Parking Cost</string>
    <string name="calculateCost">Calculate Parking Cost</string>
    <string name="one">1 hour or less</string>
    <string name="three">Up to 3 hours</string>
    <string name="ten">Up to 10 hours</string>
    <string name="max">Maximum, Upto 24 hours</string>
    <string name="call">Contact Us By Calling</string>
    <string name="supportTitle">Support Center</string>
    <string name="addParking">Add Parking</string>
    <string name="viewReceipts">View Parking Receipts</string>
    <string name="searchParking">Search Nearby Parking</string>
    <string name="updateProfile">Update User Profile</string>
    <string name="appManual">Beep Buddy Manual</string>
    <string name="support">Customer Support</string>
    <string name="signOut">Sign Out</string>
    <string name="btnEmail">Contact Us By Email</string>
    <string name="logoImageSupp">logo of support page</string>
    <string name="btnCall">Call button</string>
    <string name="buttonEmail">button of Email</string>
    <string-array name="duration_array">
        <item>@string/one</item>
        <item>@string/three</item>
        <item>@string/ten</item>
        <item>@string/max</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="jan">01</string>
    <string name="feb">02</string>
    <string name="mar">03</string>
    <string name="apr">04</string>
    <string name="may">05</string>
    <string name="jun">06</string>
    <string name="jul">07</string>
    <string name="aug">08</string>
    <string name="sep">09</string>
    <string name="oct">10</string>
    <string name="nov">11</string>
    <string name="dec">12</string>
    <string-array name="month_array">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/jun</item>
        <item>@string/jul</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>

    <string name="nineteen">2019</string>
    <string name="twenty">2020</string>
    <string name="twentyone">2021</string>
    <string name="twentytwo">2022</string>
    <string name="twentythree">2023</string>
    <string name="twentyfour">2024</string>
    <string name="twentyfive">2025</string>
    <string name="cardnumber">Card Number</string>
    <string name="appTitle">Beep Buddy</string>
    <string name="slogan">Let Beep Buddy find parking for you!</string>
    <string name="clickHere">Click here for more options</string>
    <string name="park">Park</string>
    <string name="supportNum">Tel. 123-456-7890</string>
    <string name="supEmail">Email: beepbuddy@support.com</string>
    <string name="supportIcon">icon for support page</string>
    <string name="addReceipt">Add to Receipt List</string>
    <string name="homePage">HOME PAGE</string>
    <string name="ReceiptList">RECEIPT LIST</string>
    <string name="inHours">Enter amount in hours</string>
    <string name="passwordRecover">Recover Password</string>
    <string name="yourpass">Your password:</string>
    <string name="enterEmailandPlate">Please enter your email and plate number.</string>
    <string name="mainPage">Go To Main Page</string>
    <string name="viewReceipt">View All the Receipts</string>
    <string-array name="year_array">
        <item>@string/nineteen</item>
        <item>@string/twenty</item>
        <item>@string/twentyone</item>
        <item>@string/twentytwo</item>
        <item>@string/twentythree</item>
        <item>@string/twentyfour</item>
        <item>@string/twentyfive</item>
    </string-array>


</resources>
