<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.beepbuddy.view.PassingActivity">

    <TextView
        android:id="@+id/tvHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/parkingReceipt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCarPlateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/carPlate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCarPlateNumber" />

    <TextView
        android:id="@+id/tvParking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvParkingDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/parkingDuration"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParking" />

    <TextView
        android:id="@+id/tvBuildingCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/buildingCode"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParkingDuration" />

    <TextView
        android:id="@+id/tvHostSuite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/suiteNumber"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingCode" />

    <TextView
        android:id="@+id/tvParkingCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/parkingCost"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHostSuite" />

    <TextView
        android:id="@+id/tv1CarPlateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarPlateNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2" />

    <TextView
        android:id="@+id/tv1Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1CarPlateNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv1CarPlateNumber" />

    <TextView
        android:id="@+id/tv1Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1Date"
        app:layout_constraintTop_toBottomOf="@+id/tv1Date" />

    <TextView
        android:id="@+id/tv1ParkingDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1Time"
        app:layout_constraintTop_toBottomOf="@+id/tv1Time" />

    <TextView
        android:id="@+id/tv1BuildingCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1ParkingDuration"
        app:layout_constraintTop_toBottomOf="@+id/tv1ParkingDuration" />

    <TextView
        android:id="@+id/tv1HostSuite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1BuildingCode"
        app:layout_constraintTop_toBottomOf="@+id/tv1BuildingCode" />

    <TextView
        android:id="@+id/tv1ParkingCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv1HostSuite"
        app:layout_constraintTop_toBottomOf="@+id/tv1HostSuite" />

    <Button
        android:id="@+id/btnMainPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/mainPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParkingCost" />

    <Button
        android:id="@+id/btnListView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/viewReceipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainPage" />


</androidx.constraintlayout.widget.ConstraintLayout>
